Change Log.

20120126
  [+] Ignore locals named '_' in unused/masking variable reporting.

20111224
  [+] html/delimited: export type information (in same manner as SciTE)
  [*] html: improve line number CSS treatment. e.g. don't include in copy/paste
  [+] html: highlight range of lines of scope of selected variable (like in SciTE).
  [+] command: add 'luainspect' front-end script in top directory.
  [+] command: add options for output name and html library path

20100911
  [+] core: infer types of for loop variables.

20100827
  [+] core: infer sets involving functions with multiple returns.
     e.g. local a,b = (function() return 1,2 end)()
  [!] core:fix: do not infer table sets on LuaInspect types.

20100825
  [*] SciTE: simplify install (use default path)
  [!] core: fix: function params should infer to unknown values
  [!] core: fix: infer: unknown functions return unknown values

20100823
  [*] SciTE: change Ctrl-Alt-W to Ctrl-Alt-E
  [!] SciTE: fix bookmarking (Ctrl+F2)
  [+] SciTE: bundle copy of extman.lua

20100821
  [+!] core: return analysis enabled following fixes

20100820
  [!] SciTE: fix folding performance problem (though folding still disabled by default
      due to OnStyle recursion problem)

20100819
  [!] core: fix tokenlist when opcode operands reversed lexically
  [*] metalua/performance - avoid overriding builtin pairs/ipairs
  [*] SciTE: plugin now loaded as Lua extension script (not globally).

20100818
  [!] HTML: fix missing chars at end-of-file
  [!] Metalua: fix lexer line number count off-by-one error
  [!] SciTE: fix Unicode/UTF-8 encoding breaking formatting
  [!] core: fix performance problem with tinsertlist function
  [!] core/performance: cleanup invalidated_code function

20100817
  [!] core: fix keyword token recognition problems
  [!] core: skip inspection on require loops
  [+] core: infer function return values (temporarily disabled)
  [+] core: detect dead-code (temporarily disabled)